-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.1
-
None
-
-
cab210ad369a87523000e2565eb07646f827de01 (qt-creator/qt-creator/6.0)
The fact that QtC insists on prefixing /bin/sh for emrun breaks it.
5:19:10: Checking available ports...
15:19:10: Found 1001 free ports.
15:19:10: Starting /bin/sh /Users/jason/Projects/emsdk/upstream/emscripten/emrun --browser chrome --port 30000 --no_emrun_detect --serve_after_close /Users/jason/Projects/build-poc-ui-Qt_5_15_5_WebAssembly-Debug/poc-ui.html...
/Users/jason/Projects/emsdk/upstream/emscripten/emrun: line 6: syntax error near unexpected token `"_file_=",'
/Users/jason/Projects/emsdk/upstream/emscripten/emrun: line 6: `print ("_file=", __file_)'
15:19:10: /bin/sh exited with code 2
/bin/sh is taking lines from emrun (also a script, but a Python one) and chokes on the python
However when run from the command line without /bin/sh:
jason@Novel-Jasons-MacBook-Pro MacOS % /Users/jason/Projects/emsdk/upstream/emscripten/emrun --browser chrome --port '8000' --no_emrun_detect --serve_after_close /Users/jason/Projects/build-poc-ui-Qt_5_15_5_WebAssembly-Debug/poc-ui.html
('_file_=', '/Users/jason/Projects/emsdk/upstream/emscripten/emrun')
Starting browser: /Applications/Google Chrome.app/Contents/MacOS/Google Chrome --enable-nacl --enable-pnacl --disable-restore-session-state --enable-webgl --no-default-browser-check --no-first-run --allow-file-access-from-files http://localhost:8000/poc-ui.html
Opening in existing browser session.
However if /bin/sh is replaced with `python` it will work.
/bin/sh `...` will also work but that's not technically correct as sh will execute the output of the subprocess. (It'll launch it but then try to execute garbage, so it'll look like it is working, but is very broken)
For Gerrit Dashboard: QTCREATORBUG-25905 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
376635,5 | WebAssembly: Call emrun.py directly instead of via the wrapper script | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |